--- a/configs/dataset/qm9.yaml
+++ b/configs/dataset/qm9.yaml
@@ -8,7 +8,7 @@ init:
   name: qm9
   target: 2   # choose target property from QM9 dataset (0-18, there is 19 in total)
   #data_dir: data/
-  data_dir: "./data"
+  data_dir: "${oc.env:SOURCE_DATA_DIR}"
   batch_size_train: 100
   batch_size_inference: 2048
   num_workers: 4
