--- a/configs/run.yaml
+++ b/configs/run.yaml
@@ -10,5 +10,5 @@ seed: 0 # Random seed
 device: unset # Device to use (cuda or cpu) if unset will use cuda if available
 force_deterministic: False # Force deterministic algorithms
 debug_mode: False # Debug mode
-result_dir: ./results
+result_dir: "${oc.env:RESULTS_DIR}" # Directory to save results
 compile_model: false # Whether to compile the model with torch.compile
